manifest/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "craftdemo-service"
  namespace: "craftdemo"
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app: "craftdemo"
