manifest/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "craftdemo-ingress"
  namespace: "craftdemo"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: craftdemo
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "craftdemo-service"
              servicePort: 80
